Istio/vSvc-command.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: command-ms-vsvc
  namespace: mcommerce
spec:
  hosts:
    - command-ms-service
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: command-ms-service
        subset: v1
      weight: 90
    - destination:
        host: command-ms-service
        subset: v2
      weight: 10
