Istio/vSvc-frontendClient.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ms-vsvc
  namespace: mcommerce
spec:
  hosts:
    - frontend-service
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: frontend-service
        subset: v1
      weight: 90
    - destination:
        host: frontend-service
        subset: v2
      weight: 10
