Istio/vSvc-payment.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-ms-vsvc
  namespace: mcommerce
spec:
  hosts:
    - ms-paiement-service
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: ms-paiement-service
        subset: v1
      weight: 90
    - destination:
        host: ms-paiement-service
        subset: v2
      weight: 10
