Istio/vSvc-product.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-ms-vsvc
  namespace: mcommerce
spec:
  hosts:
    - ms-product-service
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: ms-product-service
        subset: v1
      weight: 90
    - destination:
        host: ms-product-service
        subset: v2
      weight: 10
